--- a/src/css/_animations.styl
+++ b/src/css/_animations.styl
@@ -6,26 +6,28 @@
 */
 
 .order-enter
-  transform: translateX(-120%)
+  transform: translateX(-120%) rotate(0)
   transition 0.5s
   max-height: 0
   padding 0 !important
   &.order-enter-active
+    background yellow
     max-height 60px
-    transform: translateX(0)
+    transform: translateX(0) rotate(1440deg)
     padding 2rem 0 !important
 
 .order-exit
+  background thistle
   transition 0.5s
   transform: translateX(0)
   &.order-exit-active
+    background palegolenrod
     transform: translateX(120%)
-    padding: 0
-
+    padding 0
 
 .count-enter
   background: red
-  transition .5s
+  transition 5s
   transform translateY(100%)
   &.count-enter-active
     background: yellow
@@ -34,8 +36,8 @@
 .count-exit
   background: black
   transform translateY(0)
-  transition .5s
-  position absolute
+  transition 5s
+  position abolute
   left 0
   bottom 0
   &.count-exit-active
