--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,32 +1,35 @@
 .order-enter {
-  -webkit-transform: translateX(-120%);
-          transform: translateX(-120%);
+  -webkit-transform: translateX(-120%) rotate(0);
+          transform: translateX(-120%) rotate(0);
   -webkit-transition: 0.5s;
   transition: 0.5s;
   max-height: 0;
   padding: 0 !important;
 }
 .order-enter.order-enter-active {
+  background: #ff0;
   max-height: 60px;
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
+  -webkit-transform: translateX(0) rotate(1440deg);
+          transform: translateX(0) rotate(1440deg);
   padding: 2rem 0 !important;
 }
 .order-exit {
+  background: #d8bfd8;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   -webkit-transform: translateX(0);
           transform: translateX(0);
 }
 .order-exit.order-exit-active {
+  background: palegolenrod;
   -webkit-transform: translateX(120%);
           transform: translateX(120%);
   padding: 0;
 }
 .count-enter {
   background: #f00;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: 5s;
+  transition: 5s;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
 }
@@ -39,9 +42,9 @@
   background: #000;
   -webkit-transform: translateY(0);
           transform: translateY(0);
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  position: absolute;
+  -webkit-transition: 5s;
+  transition: 5s;
+  position: abolute;
   left: 0;
   bottom: 0;
 }
